Terraform/modules/security-groups/main.tf
################################################################
# Create Security Group for ALB                                #
################################################################

resource "aws_security_group" "appLoadBalancerSecurityGroup" {
  name        = "${var.ProjectName}-ALB-SG"
  description = "Allow HTTP"
  vpc_id      = var.vpcID

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

################################################################
# Create Security Group for Container                          #
################################################################

resource "aws_security_group" "ecsFargateSecurityGroup" {
  name   = "${var.ProjectName}-ECS-Tasks"
  vpc_id = var.vpcID

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.appLoadBalancerSecurityGroup.id]
    description     = "Allow Traffic from Application Load Balancer"
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
